<resources>
    <string name="app_name">Estatística</string>
    <string name="action_settings">Share</string>

    <!-- region fragments navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- endregion -->

    <string name="dialog_info">Informe a quantidade de %s que serão informadas</string>
    <string name="txt_dialog_loading">Só um minutinho.\nEstamos montandando tudo para você!</string>
    <string name="title_activity_table">table_activity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tabela_media">Media: %s</string>
    <string name="tabela_mediana">Mediana: %s</string>
    <string name="tabela_varianca">Variança: %s</string>

    <!-- region Actions -->
    <string name="ungrouped_discrete_data">Dados Discretos</string>
    <string name="discrete_data">Dados Discretos Agrupados</string>
    <string name="continuous_data">Dados Continos</string>

    <string name="historic_action">Histórico</string>
    <!-- endregion -->

    <!-- region Feature Calculate -->
    <string name="calculate_discrete_info">Insira os valores separados por “ , “:</string>
    <string name="calculate_discrete_title">Dados Discretos</string>

    <string name="calculate_grouped_discrete_title">Dados Discretos Agrupados</string>
    <string name="calculate_grouped_discrete_data_edtiText_frequency">Frequencia:</string>
    <string name="calculate_grouped_discrete_data_edtiText_class">Classe:</string>
    <string name="calculate_grouped_discrete_data_info_quantity">Quantidade de valores: %d</string>
    <!-- endregion -->
    <!-- region Commons -->
    <string name="button_calculate">Calcular</string>
    <string name="button_add">Adicionar</string>
    <!-- endregion -->
</resources>