<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSecondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/toolbar_btn_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_close"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/toolbar_btn_share"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_share"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:paddingBottom="25dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.estudos.estatistica.ui.custom_view.HeaderTableLayout
                android:id="@+id/tabela_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tabela_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                android:layout_marginHorizontal="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabela_header"
                app:layout_constraintVertical_bias="0"
                tools:itemCount="10"
                tools:listitem="@layout/tabela" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mediaGeral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="12dp"
                android:text="@string/tabela_media"
                android:textColor="@color/textColorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/mediana"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabela_recycler"
                tools:text="Media = 23" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mediana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabela_mediana"
                android:textColor="@color/textColorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/varianca"
                app:layout_constraintStart_toEndOf="@id/mediaGeral"
                app:layout_constraintTop_toTopOf="@id/mediaGeral"
                tools:text="Mediana = 24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/varianca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/tabela_varianca"
                android:textColor="@color/textColorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mediana"
                app:layout_constraintTop_toTopOf="@id/mediaGeral"
                tools:text="Variança = 34" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>